--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     max-width: 1000px;
     margin: 0px auto;
     width: 100%;
-    background: #1056AC;
+    background: #2da34f;
     text-align: center;
     padding-bottom: 10px;
 }
